--- a/Assignment 1/Makefile_clang
+++ b/Assignment 1/Makefile_clang
@@ -8,28 +8,28 @@ PROJECT=TEST
 BUILDDIR=bin
 #C source files
 SOURCES=main.c
-SOURCES+=startup_gcc.c
 SOURCES+=setup.c
+SOURCES+=startup_gcc.c
 SOURCES+=ISR.c
 
 
 #objects from the C files
 OBJECTS=$(SOURCES:.c=.o)
-VERBOSE=""
-#DUMMY FILESROM_FPULazyStackingEnable
+
+#DUMMY FILES
 DUMMYFILES=$(SOURCES:.c=.d)
 
 #Define Compiler, linker, archiver, etc.
-COMPILER=gcc
+COMPILER=clang
 PREFIX=arm-none-eabi-
-CC=${PREFIX}${COMPILER}
+CC=clang
 AR=${PREFIX}ar
 LD=${PREFIX}ld
 OBJCOPY=${PREFIX}objcopy
 
 #define CPU model and floating point behavior
 CPU=-mcpu=cortex-m4
-FPU=-mfpu=fpv4-sp-d16 -mfloat-abi=hard
+FPU= -mfloat-abi=hard
 
 #
 # The flags passed to the assembler.
@@ -39,12 +39,11 @@ AFLAGS=-mthumb \
        ${FPU}  \
        -MD
 
-LIBRARIES=./driverlib/gcc-cm4f/libdriver-cm4f.a
-
 #
 # The flags passed to the compiler.
 #
-CFLAGS=-mthumb             \
+CFLAGS=-target arm-none-eabi \
+       -mthumb             \
        ${CPU}              \
        ${FPU}              \
        -ffunction-sections \
@@ -53,45 +52,28 @@ CFLAGS=-mthumb             \
        -std=c99            \
        -Wall               \
        -pedantic           \
-       -DPART_${PART}      \
-       -I./								 	\
-
+       -I/usr/arm-none-eabi/include/	\
+			 -I./	\
 
 #Locate gcc libraries
-LIBGCC=${shell ${CC} ${CFLAGS} -print-libgcc-file-name}
-LIBC=${shell ${CC} ${CFLAGS} -print-file-name=libc.a}
-LIBM=${shell ${CC} ${CFLAGS} -print-file-name=libm.a}
+INCLUDES=-I/usr/arm-none-eabi/include/
+LIBGCC=${shell ${PREFIX}gcc  -print-libgcc-file-name}
+LIBC=${shell ${PREFIX}gcc  -print-file-name=libc.a}
+LIBM=${shell ${PREFIX}gcc  -print-file-name=libm.a}
 
 
 #
 # The rule for building the object file from each C source file.
 #
 ${BUILDDIR}${SUFFIX}/%.o: %.c
-	@if [ 'x${VERBOSE}' = x ];                            \
-	 then                                                 \
-	     echo "  CC    ${<}";                             \
-	 else                                                 \
-	     echo ${CC} ${INCLUDEDIRS} ${CFLAGS} -D${BUILDDIR} -o ${@} ${<}; \
-	 fi
-	@${CC} ${INCLUDEDIRS} ${CFLAGS} -D${BUILDDIR} -o ${@} ${<}
-ifneq ($(findstring CYGWIN, ${os}), )
-	@sed -i -r 's/ ([A-Za-z]):/ \/cygdrive\/\1/g' ${@:.o=.d}
-endif
+	 echo ${CC}  ${CFLAGS} -D${BUILDDIR} -o ${@} ${<}
 
 #
 # The rule for building the object file from each assembly source file.
 #
 ${BUILDDIR}${SUFFIX}/%.o: %.S
-	@if [ 'x${VERBOSE}' = x ];                               \
-	 then                                                    \
-	     echo "  AS    ${<}";                                \
-	 else                                                    \
-	     echo ${CC} ${AFLAGS} ${INCLUDEDIRS} -D${BUILDDIR} -o ${@} -c ${<}; \
-	 fi
-	@${CC} ${AFLAGS} ${INCLUDEDIRS} -D${BUILDDIR} -o ${@} -c ${<}
-ifneq ($(findstring CYGWIN, ${os}), )
-	@sed -i -r 's/ ([A-Za-z]):/ \/cygdrive\/\1/g' ${@:.o=.d}
-endif
+	echo ${CC} ${AFLAGS} -D${BUILDDIR} -o ${@} -c ${<};
+	echo "test"
 
 #
 # The rule for creating an object library.
@@ -124,13 +106,13 @@ ${BUILDDIR}${SUFFIX}/%.axf:
 	          --entry ${ENTRY_${notdir ${@:.axf=}}}                       \
 	          ${LDFLAGSgcc_${notdir ${@:.axf=}}}                          \
 	          ${LDFLAGS} -o ${@} $(filter %.o %.a, ${^})                  \
-	          '${LIBRARIES}' '${LIBM}' '${LIBC}' '${LIBGCC}' ;                            \
+	          '${LIBM}' '${LIBC}' '${LIBGCC}';                            \
 	 fi;                                                                  \
 	${LD} -T $${ldname}                                                   \
 	      --entry ${ENTRY_${notdir ${@:.axf=}}}                           \
 	      ${LDFLAGSgcc_${notdir ${@:.axf=}}}                              \
 	      ${LDFLAGS} -o ${@} $(filter %.o %.a, ${^})                      \
-	      '${LIBRARIES}' '${LIBM}' '${LIBC}' '${LIBGCC}'
+	      '${LIBM}' '${LIBC}' '${LIBGCC}'
 	@${OBJCOPY} -O binary ${@} ${@:.axf=.bin}
 #endif
 
@@ -158,7 +140,6 @@ ${BUILDDIR}:
 # Rules for building the blinky example.
 #
 ${BUILDDIR}/${PROJECT}.axf: ${OBJECTS}
-${BUILDDIR}/${PROJECT}.axf: ${LIBRARIES}
 ${BUILDDIR}/${PROJECT}.axf: ${PROJECT}.ld
 SCATTERgcc_${PROJECT}=${PROJECT}.ld
 ENTRY_${PROJECT}=ResetISR
