Enabled -Wextra flag

--- a/Assignment 1/Makefile
+++ b/Assignment 1/Makefile
@@ -51,6 +51,7 @@ CFLAGS=-mthumb             \
        -MD                 \
        -std=c99            \
        -Wall               \
+       -Wextra             \
        -pedantic           \
        -DPART_${PART}      \
 
