Changed makefile flash to dependt on all.

--- a/Assignment 1/Makefile.common
+++ b/Assignment 1/Makefile.common
@@ -58,11 +58,12 @@ AFLAGS=-mthumb \
 all: ${BUILDDIR}
 all: ${BUILDDIR}/${PROJECT}.bin
 
+.PHONY: clean
 clean:
 	rm -rf ${BUILDDIR}
 
 
-flash: ${BUILDDIR}/${PROJECT}.bin
+flash: all
 	echo "Flashing chip"
 	sudo lm4flash bin/${PROJECT}.bin
 
