Added -fno-short-enums for compatebility between clang and gcc.

--- a/Assignment 1/Makefile.common
+++ b/Assignment 1/Makefile.common
@@ -46,6 +46,7 @@ CFLAGS=-mthumb             \
        -Wall               \
        -Wextra             \
        -pedantic           \
+       -fno-short-enums    \
 
 #
 # The flags passed to the assembler.
