--- a/Assignment_3/Makefile.common
+++ b/Assignment_3/Makefile.common
@@ -32,15 +32,17 @@ FPU=-mfpu=fpv4-sp-d16 -mfloat-abi=hard
 #
 # The flags passed to the compiler.
 #
-CFLAGS=-mthumb             \
-       ${CPU}              \
-       ${FPU}              \
-       -ffunction-sections \
-       -fdata-sections     \
-       -std=c99            \
-       -Wall               \
-       -Wextra             \
-       -pedantic           \
+CFLAGS=-mthumb             	\
+       ${CPU}              	\
+       ${FPU}              	\
+       -ffunction-sections 	\
+       -fdata-sections     	\
+       -std=c99            	\
+       -Wall               	\
+       -Wextra             	\
+       -pedantic           	\
+       -Wmissing-prototypes \
+       -Werror
 
 #
 # The flags passed to the assembler.
