Added more warnings (and fixed some syntax).

--- a/Assignment_3/Makefile.common
+++ b/Assignment_3/Makefile.common
@@ -40,9 +40,13 @@ CFLAGS=-mthumb             	\
        -std=c99            	\
        -Wall               	\
        -Wextra             	\
-       -pedantic           	\
        -Wmissing-prototypes \
-       -Werror
+			 -Wshadow							\
+			 -Wpointer-arith			\
+			 -Wstrict-prototypes	\
+			 -Wcast-qual					\
+       -Werror							\
+       -pedantic           	\
 
 #
 # The flags passed to the assembler.
