Added NOP's in keyboard code to make it work at optimisation levels over -O2

--- a/Assignment_5/Makefile.rules
+++ b/Assignment_5/Makefile.rules
@@ -62,3 +62,6 @@ debug: all
 debug:
 	@echo "Starting debugger. This may take a while"
 	sudo ./debug_nemiver.sh
+	
+optflags:
+	@${CC} -Q --help=optimizers ${CFLAGS}
