--- a/Assignment_4/Makefile.rules
+++ b/Assignment_4/Makefile.rules
@@ -42,7 +42,7 @@ ${BUILDDIR}/%.a:
 	@echo "CC ${@}"
 
 ${BUILDDIR}/${PROJECT}.axf: ${OBJECTS} ${LIBRARIES} ${LDFILE}
-	@${LD}  ${LDFLAGS} -o ${@} $(filter %.o %.a, ${^}) ${LIBM} ${LIBC} ${LIBGCC}
+	@${LD}  ${LDFLAGS} -o ${@} $(filter %.o %.a, ${^}) ${LINKOBJECTS}
 	@echo "LD ${@}"
 	
 ${PROJECT}.bin: ${BUILDDIR}/${PROJECT}.axf
@@ -62,3 +62,6 @@ debug: all
 debug:
 	@echo "Starting debugger. This may take a while"
 	sudo ./debug_nemiver.sh
+	
+optflags:
+	@${CC} -Q --help=optimizers ${CFLAGS}
