Changed makefile to define -NDEBUG unless in debugging mode.

--- a/Assignment_6/Makefile.common
+++ b/Assignment_6/Makefile.common
@@ -67,6 +67,7 @@ CFLAGS=-mthumb             	\
 			 -Wno-keyword-macro		\
        -Werror							\
        -pedantic           	\
+       -DNDEBUG
      
      
 #
