--- a/Preemptive_Scheduler/Makefile.common
+++ b/Preemptive_Scheduler/Makefile.common
@@ -67,6 +67,7 @@ CFLAGS=-mthumb             	\
 			 -Wno-keyword-macro		\
        -Werror							\
        -pedantic           	\
+       -DNDEBUG
      
      
 #
